--- a/public/css/sitio.css
+++ b/public/css/sitio.css
@@ -50,6 +50,15 @@
     color: white !important;
 }
 
+.bg-excel{
+    background: #27BB00 !important;
+    color: white !important;
+}
+
+.bg-excel:hover{
+    background: #208d01 !important;
+    color: white !important;
+}
 
 
 
@@ -80,7 +89,7 @@ img.img-proveedor{
     height: 210px !important;
     transition: transform .2s;
     display: block;
-    border: 1px solid rgb(0, 0, 0.2);
+    border: 1px solid rgb(233, 233, 233);
     z-index: 9999;
 }
 
